--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" data-theme="sunrise">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
@@ -17,7 +17,7 @@
           <div class="sub">Нажимай кнопки — команды улетают в Telegram-бота</div>
         </div>
       </div>
-      <button id="themeBtn" class="pill" type="button">🌙 Theme</button>
+      <button id="themeBtn" class="pill" type="button" aria-label="Переключить тему">🌙 Theme</button>
     </header>
 
     <section class="card status">
@@ -65,7 +65,7 @@
         </div>
         <button id="clearBtn" class="pill" type="button">🧹 Clear</button>
       </div>
-      <pre id="logBox" class="logbox"></pre>
+      <pre id="logBox" class="logbox" role="log" aria-live="polite"></pre>
     </section>
 
     <section class="bottom">
